--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,7 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.KEY }}
           source: "scripts/deploy.sh"
-          target: "."
+          target: "/home/app"
     
       - name: execute remote command
         uses: appleboy/ssh-action@master
